--- a/public/LESS/base.less
+++ b/public/LESS/base.less
@@ -3,7 +3,7 @@
 body {
 	font-family:  "open sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	background-color: #ffffff;
-	font-size: 13px;
+	font-size: 14px;
 	color: @text-color;
 	overflow-x: hidden;
 }
@@ -563,18 +563,18 @@ code {
 	-moz-border-left-colors: none;
 	-moz-border-right-colors: none;
 	-moz-border-top-colors: none;
-	background-color: @cherry;
-	border-color: @darker-cherry;
+	background-color: white;
+	border-color: @lightest-grey;
 	border-image: none;
 	border-style: solid solid none;
 	border-width: 4px 0px 0;
-	color: white;
+	color: @text-color;
 	margin-bottom: 0;
 	padding: 14px 15px 7px;
 	min-height: 48px;
 }
 .ibox-title-full .ibox-tools a {
-	color: white;
+	color: @lighter-grey;
 }
 .ibox-content-full {
 	background-color: @cherry;
@@ -689,8 +689,20 @@ table.table-mail tr td {
 
 .cherry-bg {
 	background-color: @cherry;
+	.voremodulatsioon-nav;
+	background-position: 100% 0;
+	background-repeat: no-repeat;
 }
-
+@media(max-width: 992px) {
+	.cherry-bg {
+		background-repeat:repeat;
+	}
+}
+.cherry-bg-alt {
+	background-color: @cherry;
+	.voremodulatsioon-nav;
+	background-position: 100% 0;
+}
 .blue-bg {
 	background-color: @blue;
 }
@@ -1266,169 +1278,169 @@ a.close-canvas-menu:hover {
 }
 
 //GRID SYSTEM EXTENSION FOR LARGE DESKTOP SCREENS
- .col-xl-1, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-10, .col-xl-11, .col-xl-12 {
-  position: relative;
-  min-height: 1px;
-  padding-right: 15px;
-  padding-left: 15px;
+.col-xl-1, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-10, .col-xl-11, .col-xl-12 {
+	position: relative;
+	min-height: 1px;
+	padding-right: 15px;
+	padding-left: 15px;
 }
 @media (min-width: 1500px) {
-  .col-xl-1, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-10, .col-xl-11, .col-xl-12 {
-    float: left;
-  }
-  .col-xl-12 {
-    width: 100%;
-  }
-  .col-xl-11 {
-    width: 91.66666667%;
-  }
-  .col-xl-10 {
-    width: 83.33333333%;
-  }
-  .col-xl-9 {
-    width: 75%;
-  }
-  .col-xl-8 {
-    width: 66.66666667%;
-  }
-  .col-xl-7 {
-    width: 58.33333333%;
-  }
-  .col-xl-6 {
-    width: 50%;
-  }
-  .col-xl-5 {
-    width: 41.66666667%;
-  }
-  .col-xl-4 {
-    width: 33.33333333%;
-  }
-  .col-xl-3 {
-    width: 25%;
-  }
-  .col-xl-2 {
-    width: 16.66666667%;
-  }
-  .col-xl-1 {
-    width: 8.33333333%;
-  }
-  .col-xl-pull-12 {
-    right: 100%;
-  }
-  .col-xl-pull-11 {
-    right: 91.66666667%;
-  }
-  .col-xl-pull-10 {
-    right: 83.33333333%;
-  }
-  .col-xl-pull-9 {
-    right: 75%;
-  }
-  .col-xl-pull-8 {
-    right: 66.66666667%;
-  }
-  .col-xl-pull-7 {
-    right: 58.33333333%;
-  }
-  .col-xl-pull-6 {
-    right: 50%;
-  }
-  .col-xl-pull-5 {
-    right: 41.66666667%;
-  }
-  .col-xl-pull-4 {
-    right: 33.33333333%;
-  }
-  .col-xl-pull-3 {
-    right: 25%;
-  }
-  .col-xl-pull-2 {
-    right: 16.66666667%;
-  }
-  .col-xl-pull-1 {
-    right: 8.33333333%;
-  }
-  .col-xl-pull-0 {
-    right: auto;
-  }
-  .col-xl-push-12 {
-    left: 100%;
-  }
-  .col-xl-push-11 {
-    left: 91.66666667%;
-  }
-  .col-xl-push-10 {
-    left: 83.33333333%;
-  }
-  .col-xl-push-9 {
-    left: 75%;
-  }
-  .col-xl-push-8 {
-    left: 66.66666667%;
-  }
-  .col-xl-push-7 {
-    left: 58.33333333%;
-  }
-  .col-xl-push-6 {
-    left: 50%;
-  }
-  .col-xl-push-5 {
-    left: 41.66666667%;
-  }
-  .col-xl-push-4 {
-    left: 33.33333333%;
-  }
-  .col-xl-push-3 {
-    left: 25%;
-  }
-  .col-xl-push-2 {
-    left: 16.66666667%;
-  }
-  .col-xl-push-1 {
-    left: 8.33333333%;
-  }
-  .col-xl-push-0 {
-    left: auto;
-  }
-  .col-xl-offset-12 {
-    margin-left: 100%;
-  }
-  .col-xl-offset-11 {
-    margin-left: 91.66666667%;
-  }
-  .col-xl-offset-10 {
-    margin-left: 83.33333333%;
-  }
-  .col-xl-offset-9 {
-    margin-left: 75%;
-  }
-  .col-xl-offset-8 {
-    margin-left: 66.66666667%;
-  }
-  .col-xl-offset-7 {
-    margin-left: 58.33333333%;
-  }
-  .col-xl-offset-6 {
-    margin-left: 50%;
-  }
-  .col-xl-offset-5 {
-    margin-left: 41.66666667%;
-  }
-  .col-xl-offset-4 {
-    margin-left: 33.33333333%;
-  }
-  .col-xl-offset-3 {
-    margin-left: 25%;
-  }
-  .col-xl-offset-2 {
-    margin-left: 16.66666667%;
-  }
-  .col-xl-offset-1 {
-    margin-left: 8.33333333%;
-  }
-  .col-xl-offset-0 {
-    margin-left: 0;
-  }
+	.col-xl-1, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-10, .col-xl-11, .col-xl-12 {
+		float: left;
+	}
+	.col-xl-12 {
+		width: 100%;
+	}
+	.col-xl-11 {
+		width: 91.66666667%;
+	}
+	.col-xl-10 {
+		width: 83.33333333%;
+	}
+	.col-xl-9 {
+		width: 75%;
+	}
+	.col-xl-8 {
+		width: 66.66666667%;
+	}
+	.col-xl-7 {
+		width: 58.33333333%;
+	}
+	.col-xl-6 {
+		width: 50%;
+	}
+	.col-xl-5 {
+		width: 41.66666667%;
+	}
+	.col-xl-4 {
+		width: 33.33333333%;
+	}
+	.col-xl-3 {
+		width: 25%;
+	}
+	.col-xl-2 {
+		width: 16.66666667%;
+	}
+	.col-xl-1 {
+		width: 8.33333333%;
+	}
+	.col-xl-pull-12 {
+		right: 100%;
+	}
+	.col-xl-pull-11 {
+		right: 91.66666667%;
+	}
+	.col-xl-pull-10 {
+		right: 83.33333333%;
+	}
+	.col-xl-pull-9 {
+		right: 75%;
+	}
+	.col-xl-pull-8 {
+		right: 66.66666667%;
+	}
+	.col-xl-pull-7 {
+		right: 58.33333333%;
+	}
+	.col-xl-pull-6 {
+		right: 50%;
+	}
+	.col-xl-pull-5 {
+		right: 41.66666667%;
+	}
+	.col-xl-pull-4 {
+		right: 33.33333333%;
+	}
+	.col-xl-pull-3 {
+		right: 25%;
+	}
+	.col-xl-pull-2 {
+		right: 16.66666667%;
+	}
+	.col-xl-pull-1 {
+		right: 8.33333333%;
+	}
+	.col-xl-pull-0 {
+		right: auto;
+	}
+	.col-xl-push-12 {
+		left: 100%;
+	}
+	.col-xl-push-11 {
+		left: 91.66666667%;
+	}
+	.col-xl-push-10 {
+		left: 83.33333333%;
+	}
+	.col-xl-push-9 {
+		left: 75%;
+	}
+	.col-xl-push-8 {
+		left: 66.66666667%;
+	}
+	.col-xl-push-7 {
+		left: 58.33333333%;
+	}
+	.col-xl-push-6 {
+		left: 50%;
+	}
+	.col-xl-push-5 {
+		left: 41.66666667%;
+	}
+	.col-xl-push-4 {
+		left: 33.33333333%;
+	}
+	.col-xl-push-3 {
+		left: 25%;
+	}
+	.col-xl-push-2 {
+		left: 16.66666667%;
+	}
+	.col-xl-push-1 {
+		left: 8.33333333%;
+	}
+	.col-xl-push-0 {
+		left: auto;
+	}
+	.col-xl-offset-12 {
+		margin-left: 100%;
+	}
+	.col-xl-offset-11 {
+		margin-left: 91.66666667%;
+	}
+	.col-xl-offset-10 {
+		margin-left: 83.33333333%;
+	}
+	.col-xl-offset-9 {
+		margin-left: 75%;
+	}
+	.col-xl-offset-8 {
+		margin-left: 66.66666667%;
+	}
+	.col-xl-offset-7 {
+		margin-left: 58.33333333%;
+	}
+	.col-xl-offset-6 {
+		margin-left: 50%;
+	}
+	.col-xl-offset-5 {
+		margin-left: 41.66666667%;
+	}
+	.col-xl-offset-4 {
+		margin-left: 33.33333333%;
+	}
+	.col-xl-offset-3 {
+		margin-left: 25%;
+	}
+	.col-xl-offset-2 {
+		margin-left: 16.66666667%;
+	}
+	.col-xl-offset-1 {
+		margin-left: 8.33333333%;
+	}
+	.col-xl-offset-0 {
+		margin-left: 0;
+	}
 }
 //END GRID SYSTEM EXTENSION
 
@@ -1439,5 +1451,5 @@ body.modal-open {
 }
 // IE9 fix
 #lblDisposalDate{
-    position: relative;
+	position: relative;
 }
