--- a/public/LESS/media.less
+++ b/public/LESS/media.less
@@ -34,14 +34,9 @@
 	}
 
 	//NAVBAR
-	.nav li .profile-element {
-		margin: 0;
-		padding: 12px 0px;
-
-	}
-	.nav li a {
-		padding: 15px 10px 10px 10px;
-	}
+	//.nav li a {
+	//	padding: 15px 10px 10px 10px;
+	//}
 	.navbar-search {
 		display: none;
 	}
