--- a/public/LESS/style.less
+++ b/public/LESS/style.less
@@ -2,13 +2,13 @@
 
 /*
  *
- *   INSPINIA - Responsive Admin Theme
- *   version 2.0
+ *   TTÜ Intranet Styles
  *
 */
 
-// Google Fonts
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&lang=en");
+// Fonts
+@import "fonts.less";
+//@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&lang=en");
 
 // Variables, Mixins
 @import "variables.less";
