--- a/public/LESS/variables.less
+++ b/public/LESS/variables.less
@@ -23,7 +23,7 @@
 
 @grey-btn: #DDDDDD; // Grey button color
 
-@text-color: #676a6c;   // Body text
+@text-color: @darker-grey;   // Body text
 @gray: @cherry;         // Background wrapper color
 @light-gray: #D1DADE;   // Default label, badget
 @label-badget-color: #5E5E5E;
