--- a/public/LESS/elements.less
+++ b/public/LESS/elements.less
@@ -1472,8 +1472,9 @@ table.dataTable thead .sorting:after {
 /* Validation */
 label.error {
 	color: #cc5965;
-	display: inline-block;
+	display: block;
 	margin-left: 5px;
+	text-align: left;
 }
 
 .form-control.error {
