--- a/public/LESS/navigation.less
+++ b/public/LESS/navigation.less
@@ -39,8 +39,7 @@
 }
 
 .navbar-default {
-	background-color: transparent;
-	border-color: @nav-bg;
+	background-color: white;
 }
 
 .navbar-top-links li {
