--- a/public/LESS/elements.less
+++ b/public/LESS/elements.less
@@ -1,62 +1,133 @@
 // main: style.less
-/* RATING SYSTEM
+/* RATING SYSTEM cherry
 ---------------------------------------------------------------------*/
 .rating {
-  float: left;
 }
 /* :not(:checked) is a filter, so that browsers that don’t support :checked don’t
-   follow these rules. Every browser that supports :checked also supports :not(), so
-   it doesn’t make the test unnecessarily selective */
+follow these rules. Every browser that supports :checked also supports :not(), so
+it doesn’t make the test unnecessarily selective
 .rating:not(:checked) > input {
-  position: absolute;
-  top: -9999px;
-  clip: rect(0, 0, 0, 0);
+position: absolute;
+top: -9999px;
+clip: rect(0, 0, 0, 0);
 }
 .rating:not(:checked) > label {
-  float: right;
-  width: 1.1em;
-  padding: 0em 0em 0em 0.02em;
-  overflow: hidden;
-  white-space: nowrap;
-  cursor: pointer;
-  font-size: 200%;
-  line-height: 1.2;
-  color: #c9c9c9;
-	top: 0px;
-  left: 0px;
+float: right;
+width: 1.1em;
+padding: 0em 0em 0em 0.02em;
+overflow: hidden;
+white-space: nowrap;
+cursor: pointer;
+font-size: 200%;
+line-height: 1.2;
+color: #c9c9c9;
+top: 0px;
+left: 0px;
 }
 .rating:not(:checked) > label:before {
-  font-family: FontAwesome;
-  content: "\f005 \00a0";
-  display: inline-block;
-  padding: 0 0px 0 0px;
-  vertical-align: middle;
-	top: 0px;
-  left: 0px;
+font-family: FontAwesome;
+content: "\f005 \00a0";
+display: inline-block;
+padding: 0 0px 0 0px;
+vertical-align: middle;
+top: 0px;
+left: 0px;
 }
 .rating > input:checked ~ label {
-  color: #870042;
-  text-shadow: 1px 1px #6d0036, 2px 2px #6d0036, 0.1em 0.1em 0.2em rgba(0, 0, 0, 0.5);
-	top: 0px;
-  left: 0px;
+color: @cherry;
+text-shadow: 1px 1px #6d0036, 2px 2px #6d0036, 0.1em 0.1em 0.2em rgba(0, 0, 0, 0.5);
+top: 0px;
+left: 0px;
 }
 .rating:not(:checked) > label:hover,
 .rating:not(:checked) > label:hover ~ label {
-  color: #870042;
-  text-shadow: 1px 1px #6d0036, 2px 2px #6d0036, 0.1em 0.1em 0.2em rgba(0, 0, 0, 0.5);
+color: @cherry;
+text-shadow: 1px 1px #6d0036, 2px 2px #6d0036, 0.1em 0.1em 0.2em rgba(0, 0, 0, 0.5);
 }
 .rating > input:checked + label:hover,
 .rating > input:checked + label:hover ~ label,
 .rating > input:checked ~ label:hover,
 .rating > input:checked ~ label:hover ~ label,
 .rating > label:hover ~ input:checked ~ label {
-  color: #870042;
-  text-shadow: 1px 1px #6d0036, 2px 2px #6d0036, 0.1em 0.1em 0.2em rgba(0, 0, 0, 0.5);
+color: @cherry;
+text-shadow: 1px 1px #6d0036, 2px 2px #6d0036, 0.1em 0.1em 0.2em rgba(0, 0, 0, 0.5);
 }
 .rating > label:active{
-  position: relative;
-  top: 2px;
-  left: 2px;
+position: relative;
+top: 2px;
+left: 2px;
+}
+
+textarea.styled {
+width: 100%;
+height: 120px;
+border: 3px solid @lightest-grey;
+padding: 5px;
+font-size: 14px;
+
+}
+/* RATING SYSTEM gold
+------------------------------------------------------------------*/
+
+.rating {
+}
+/* :not(:checked) is a filter, so that browsers that don’t support :checked don’t
+follow these rules. Every browser that supports :checked also supports :not(), so
+it doesn’t make the test unnecessarily selective */
+.rating:not(:checked) > input {
+	position: relative;
+	top: -9999px;
+	clip: rect(0, 0, 0, 0);
+}
+.rating:not(:checked) > label {
+	width: 1.1em;
+	padding: 0em 0em 0em 0.02em;
+	overflow: hidden;
+	white-space: nowrap;
+	cursor: pointer;
+	font-size: 300%;
+	line-height: 1.2;
+	color: #c9c9c9;
+	top: 0px;
+	left: 0px;
+}
+@media (max-width: 768px) {
+	.rating:not(:checked) > label {
+		font-size: 150%;
+	}
+}
+.rating:not(:checked) > label:before {
+	font-family: FontAwesome;
+	content: "\f005 \00a0";
+	display: inline-block;
+	padding: 0 0px 0 0px;
+	vertical-align: middle;
+	top: 0px;
+	left: 0px;
+}
+.rating > input:checked ~ label {
+	color: goldenrod;
+	text-shadow: 1px 1px darkgoldenrod, 2px 2px darkgoldenrod, 0.1em 0.1em 0.2em rgba(0, 0, 0, 0.5);
+	top: 0px;
+	left: 0px;
+}
+.rating:not(:checked) > label:hover,
+.rating:not(:checked) > label:hover ~ label {
+	color: goldenrod;
+	text-shadow: 1px 1px darkgoldenrod, 2px 2px darkgoldenrod, 0.1em 0.1em 0.2em rgba(0, 0, 0, 0.5);
+}
+.rating > input:checked + label:hover,
+.rating > input:checked + label:hover ~ label,
+.rating > input:checked ~ label:hover,
+.rating > input:checked ~ label:hover ~ label,
+.rating > label:hover ~ input:checked ~ label {
+	color: goldenrod;
+	text-shadow: 1px 1px darkgoldenrod, 2px 2px darkgoldenrod, 0.1em 0.1em 0.2em rgba(0, 0, 0, 0.5);
+}
+.rating > label:active{
+	position: relative;
+	top: 2px;
+	left: 2px;
 }
 
 textarea.styled {
@@ -64,9 +135,9 @@ textarea.styled {
 	height: 120px;
 	border: 3px solid @lightest-grey;
 	padding: 5px;
-	font-size: 14px;
-
+	font-size: 1.3em;
 }
+
 
 /* MY PROFILE
 ---------------------------------------------------------------------*/
