--- a/public/LESS/sidebar.less
+++ b/public/LESS/sidebar.less
@@ -1,6 +1,6 @@
 // main: style.less
 
-.sidebard-panel {
+.sidebar-panel {
 	width: 220px;
 	background: darken(@gray, 3%);
 	padding: 10px 20px;
@@ -19,23 +19,23 @@
 		display: block;
 	}
 }
-.sidebard-panel .feed-element img.img-circle {
+.sidebar-panel .feed-element img.img-circle {
 	width: 32px;
 	height: 32px;
 }
 
-.sidebard-panel .feed-element, .media-body, .sidebard-panel p {
+.sidebar-panel .feed-element, .media-body, .sidebar-panel p {
 	font-size: 12px;
 }
 
-.sidebard-panel .feed-element {
+.sidebar-panel .feed-element {
 	margin-top: 20px;
 	padding-bottom: 0;
 }
-.sidebard-panel .list-group {
+.sidebar-panel .list-group {
 	margin-bottom: 10px;
 }
-.sidebard-panel .list-group .list-group-item {
+.sidebar-panel .list-group .list-group-item {
 	padding: 5px 0;
 	font-size: 12px;
 	border: 0;
@@ -48,7 +48,6 @@
 .body-small .sidebar-content .wrapper, .body-small .wrapper.sidebar-content {
 	padding-right: 20px !important;
 }
-
 // Right sidebar
 #right-sidebar {
 	background-color: #fff;
@@ -56,7 +55,7 @@
 	border-top: 1px solid #e7eaec;
 	overflow: hidden;
 	position: fixed;
-	top: 50px;
+	top: -62px;
 	width: 260px !important;
 	z-index: 1009;
 	bottom: 0;
@@ -76,13 +75,35 @@
 	right: -260px;
 }
 
+// Right sidebar filter
+#right-sidebar-filter {
+	width: 220px;
+	padding: 0px 0 0px 0;
+	margin: 0px 0px 0 0;
+	right: 0;
+	position:fixed;
+	background: #fff;
+	overflow: visible;
+	border: 1px solid @lightest-grey;
+	border-radius: 5px;
 
+}
+#right-sidebar-filter ul li a {
+	color: @text-color;
+}
+#right-sidebar-filter ul li a:hover, #right-sidebar-filter ul li a:active, #right-sidebar-filter ul li a:focus {
+	//color: @cherry;
+	background: @lightest-grey;
+	padding: 0 5px;
+	-webkit-box-shadow: 0px 0px 0px 2px #A6A6A6;
+	box-shadow:  0px 1px 4px 0px #A6A6A6;
+}
 #right-sidebar.sidebar-open {
-	right: 0px;
+	right: -15px;
 }
 
 #right-sidebar.sidebar-open.sidebar-top {
-	top: 0;
+	//top: 0;
 	border-top: none;
 }
 
