--- a/public/LESS/elements.less
+++ b/public/LESS/elements.less
@@ -1,73 +1,7 @@
 // main: style.less
-/* RATING SYSTEM cherry
----------------------------------------------------------------------*/
-.rating {
-}
-/* :not(:checked) is a filter, so that browsers that don’t support :checked don’t
-follow these rules. Every browser that supports :checked also supports :not(), so
-it doesn’t make the test unnecessarily selective
-.rating:not(:checked) > input {
-position: absolute;
-top: -9999px;
-clip: rect(0, 0, 0, 0);
-}
-.rating:not(:checked) > label {
-float: right;
-width: 1.1em;
-padding: 0em 0em 0em 0.02em;
-overflow: hidden;
-white-space: nowrap;
-cursor: pointer;
-font-size: 200%;
-line-height: 1.2;
-color: #c9c9c9;
-top: 0px;
-left: 0px;
-}
-.rating:not(:checked) > label:before {
-font-family: FontAwesome;
-content: "\f005 \00a0";
-display: inline-block;
-padding: 0 0px 0 0px;
-vertical-align: middle;
-top: 0px;
-left: 0px;
-}
-.rating > input:checked ~ label {
-color: @cherry;
-text-shadow: 1px 1px #6d0036, 2px 2px #6d0036, 0.1em 0.1em 0.2em rgba(0, 0, 0, 0.5);
-top: 0px;
-left: 0px;
-}
-.rating:not(:checked) > label:hover,
-.rating:not(:checked) > label:hover ~ label {
-color: @cherry;
-text-shadow: 1px 1px #6d0036, 2px 2px #6d0036, 0.1em 0.1em 0.2em rgba(0, 0, 0, 0.5);
-}
-.rating > input:checked + label:hover,
-.rating > input:checked + label:hover ~ label,
-.rating > input:checked ~ label:hover,
-.rating > input:checked ~ label:hover ~ label,
-.rating > label:hover ~ input:checked ~ label {
-color: @cherry;
-text-shadow: 1px 1px #6d0036, 2px 2px #6d0036, 0.1em 0.1em 0.2em rgba(0, 0, 0, 0.5);
-}
-.rating > label:active{
-position: relative;
-top: 2px;
-left: 2px;
-}
 
-textarea.styled {
-width: 100%;
-height: 120px;
-border: 3px solid @lightest-grey;
-padding: 5px;
-font-size: 14px;
-
-}
-/* RATING SYSTEM gold
-------------------------------------------------------------------*/
+// RATING SYSTEM gold
+//------------------------------------------------------------------
 
 .rating {
 }
@@ -138,10 +72,9 @@ textarea.styled {
 	font-size: 1.3em;
 }
 
-
 /* MY PROFILE
----------------------------------------------------------------------*/
-#my-profile-1 {
+------------------------------------------------------------------*/
+#my-profile {
 	background: white;
 	color: @text-color;
 	position: static;
@@ -155,25 +88,53 @@ textarea.styled {
 	-webkit-box-shadow: 2px 4px 6px 0 rgba(0, 0, 0, .1);
 	box-shadow: 2px 4px 6px 0 rgba(0, 0, 0, .1);
 	border-top: 1px solid @lighter-grey;
+	transition: all 0.7s ease;
+	-moz-transition: all 0.7s ease;
+	-webkit-transition: all 0.7s ease;
+}
+#my-profile.minimized {
+	height: 30px;
+	width: auto;
+	padding: 5px;
+	margin: -41px 0px 10px 0px;
+	color: white;
+	background: @cherry;
+	border-top: 1px solid @darker-cherry;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
+	-webkit-box-shadow: 0px 0px 0px 0 rgba(0, 0, 0, .1);
+	box-shadow: 0px 0px 0px 0 rgba(0, 0, 0, .1);
+}
+#minimized-profile a {
+	color: @darkest-cherry;
 }
 
-#my-profile-2 {
-	background: @cherry;
-	color: white;
-	position: static;
-	height: 320px;
-	width: 100%;
-	top: 0px;
-	left: 0px;
-	float: left;
-	display: block;
-	margin: -41px 0 25px 0px;
-	-webkit-box-shadow: 2px 4px 6px 0 rgba(0, 0, 0, .1);
-	box-shadow: 2px 4px 6px 0 rgba(0, 0, 0, .1);
-	border-top: 1px solid @darker-cherry;
+// SCROLL BACK UP BUTTON
+//-----------------------------------------------------------------
+.scroll-up {
+	background-color: transparent;
+	bottom: 2em;
+	color: @darker-grey;
+	display: none;
+	opacity:0.6;
+	padding: 1em;
+	position: fixed;
+	right: 1.5em;
+	text-decoration: none;
+	border-radius: 3px;
+	z-index: 1000;
+}
+.scroll-up:hover {
+	color: @darker-grey;
+	opacity:1;
+	transition:1s;
+}
+.scroll-up:active, .scroll-up:focus {
+	opacity:0.6;
+	color: @darker-grey;
 }
 /* TOGLE SWICH
----------------------------------------------------------------------*/
+------------------------------------------------------------------*/
 .onoffswitch {
 	position: relative;
 	width: 64px;
@@ -450,7 +411,27 @@ textarea.styled {
 	color: #fff;
 }
 
+/* Full screen view */
+#fullscreen-btn {
+	color: @grey;
+	opacity: 0.6;
+	position: fixed;
+	bottom: 10px;
+	left: 10px;
+	z-index: 3000;
+	transition: all 0.5s ease;
+	-moz-transition: all 0.5s ease;
+	-webkit-transition: all 0.5s ease;
 
+}
+#fullscreen-btn:hover {
+	color: @grey;
+	opacity: 1;
+}
+#fullscreen-btn.active {
+	color: @grey;
+	opacity: 1;
+}
 /* Chat */
 .chat-activity-list .chat-element {
 	border-bottom: 1px solid @border-color;
